--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -34,8 +34,8 @@
         <h2>Login</h2>
         <form id="login-form" class="form">
             <div class="form-group">
-                <label for="login-username">Username</label>
-                <input type="text" id="login-username" required>
+                <label for="login-identifier">Username or Email</label>
+                <input type="text" id="login-identifier" required>
             </div>
             <div class="form-group">
                 <label for="login-password">Password</label>
