--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -34,6 +34,18 @@
         <h2>Register</h2>
         <form id="register-form" class="form">
             <div class="form-group">
+                <label for="register-fName">First Name</label>
+                <input type="text" id="register-fName" required>
+            </div>
+            <div class="form-group">
+                <label for="register-lName">Last Name</label>
+                <input type="text" id="register-lName" required>
+            </div>
+            <div class="form-group">
+                <label for="register-email">Email</label>
+                <input type="email" id="register-email" required>
+            </div>
+            <div class="form-group">
                 <label for="register-username">Username</label>
                 <input type="text" id="register-username" required>
             </div>
